--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-tsparticles": "^2.1.0",
+    "tsparticles": "^2.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
